# jwst-gc-pipeline

./: .gitignore  CLAUDE.md  MANIFEST.in  PERFORMANCE_BRICK.md  PERFRAME_PLAN.md  PHOTOMETRY_PIPELINE.md  PHOTOMETRY_PIPELINE_BRIEF.md  PIPELINE_METHODS.md  PSFPhotometryPlan2026-06-09.md  README.md  REFACTOR_PLAN.md  SATURATED_PIXEL_HANDLING.md  conftest.py  pyproject.toml
.github/workflows/: tag-on-merge.yml  tests.yml
docs/multiframe_keep_verification/: REGRESSION_VERIFICATION.md  diagnose_remaining_misses.py
docs/pr57_recovery_investigation/: README.md  make_caveat_figs.py  make_figs.py
docs/reports/: CRDS_STALE_FILTEROFFSET_RMAP_INCIDENT.md  DVA_INTERDETECTOR_REPORT.md  SATSTAR_WING_CALIBRATION_REPORT.md  SATURATED_STAR_PHOTOMETRY_ARTICLE.md
jwst_gc_pipeline/: __init__.py  astrometry_utils.py  catalog_utils.py  paths.py  provenance.py  scratch_basepath.py
jwst_gc_pipeline/astrometry/: __init__.py  build_multiepoch_pm.py  multiepoch_pm.py  plot_pm.py
jwst_gc_pipeline/astrometry_gdc/: GDC_EXPERIMENT_REPORT.md  README.md  __init__.py  correct_catalog.py  gdc_wcs.py  make_vector_figures.py  mgc_pixel_area_analysis.py  stdgdc.py
jwst_gc_pipeline/cmz/: README.md  __init__.py  catalog_assembly.py  coverage_moc.py  hats_export.py  hips.py  hipsgen.py
jwst_gc_pipeline/data/: __init__.py
jwst_gc_pipeline/photometry/: ASTROMETRY_CHECKPOINTS.md  BULK_ASTROMETRY_UPDATE.md  DETECTOR_TIE_DESIGN.md  INCREMENTAL_REFIT_PLAN.md  __init__.py  artificial_stars.py  astrometry_checkpoint.py  astrometry_offsets.py  bulk_astrometry_update.py  catalog_long.py  cataloging.py  column_utils.py  crowdsource_catalogs_long.py  dedup_catalog.py  detector_tie.py  evaluate_region_recovery.py  forced_fill.py  generate_offsets_table.py  incremental_refit.py  interframe_overlap.py  isochrones.py  make_reference_from_pipeline_catalogs.py  make_reftable.py  make_starless_image.py  manual_defaults.py  measure_offsets.py  merge_catalogs.py  naming.py  psf_fitting.py  psf_paths.py  registration_gate.py  saturation_continuity.py  visit_consensus.py
jwst_gc_pipeline/plotting/: __init__.py  make_all_cmds_m7.py  plot_tools.py
jwst_gc_pipeline/reduction/: ASTROMETRY_REDUNDANCY_AUDIT.md  ASTROMETRY_WCS_CORRECTION_FLOW.md  JWST_UPGRADE_PLAYBOOK.md  NOTES_satstar_spurious_saturation.md  PipelineMIRI.py  PipelineRerunNIRCAM-LONG.py  PipelineRerunNIRCAM-SHORT.py  __init__.py  align_to_catalogs.py  build_gaia_virac2_refcat.py  build_gaia_virac2_refcat_byquery.py  build_virac2_offsets.py  destreak.py  dva_correction.py  fetch_refs.py  filtering.py  make_merged_psf.py  merge_a_plus_b.py  realign_and_merge.py  satstar_deblend.py  saturated_star_finding.py  static_placement_correction.py  validate_offsets_table.py
jwst_gc_pipeline/tests/: test_scratch_basepath.py
jwst_gc_pipeline/versioning/: VERSIONING_PROVENANCE.md  __init__.py  fieldplan.py  fingerprint.py  prov_sidecar.py  rerun.py  stamping.py  tags.py  upstream.py
licenses/: LICENSE.rst
reduction/: PipelineRerunNIRCAM-LONG.py
scripts/analysis/: regen_satstar_cmds_afterjob.sbatch  regenerate_satstar_cmds.py  satstar_ramp_zone_figures.py  (+1 more)
tests/: test_manual_defaults_consistency.py  test_reduction_scripts.py  test_thin_pipeline_logs.py
(+207 files in other folders)
