[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "jwst-gc-pipeline"
description = "JWST photometry pipeline for crowded fields, suitable for Galactic Center NIRCam/MIRI data reduction and processing"
requires-python = ">=3.9"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "Adam Ginsburg", email = "adam.g.ginsburg@gmail.com" },
]
dependencies = [
  "numpy",
  "scipy",
  "astropy",
  "matplotlib",
  "photutils>=2.0.dev0",
  "astroquery",
  "tqdm",
  "regions",
  "reproject",
  "stpsf",
  "crds",
  "jwst",
  "crowdsourcephoto",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]

[project.urls]
Homepage = "https://github.com/keflavich/jwst-gc-pipeline"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
"jwst_gc_pipeline.reduction" = ["*.ecsv"]

[tool.setuptools_scm]
write_to = "jwst_gc_pipeline/version.py"

[tool.pytest.ini_options]
testpaths = [
  "jwst_gc_pipeline",
  "tests",
]
