[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "jwst-gc-pipeline"
description = "JWST photometry pipeline for crowded fields, suitable for Galactic Center NIRCam/MIRI data reduction and processing"
requires-python = ">=3.9"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "Adam Ginsburg", email = "adam.g.ginsburg@gmail.com" },
]
dependencies = [
  "numpy",
  "scipy",
  "astropy",
  "matplotlib",
  "photutils>=2.0.dev0",
  "astroquery",
  "tqdm",
  "regions",
  "reproject",
  "stpsf",
  "crds",
  "jwst",
  "crowdsourcephoto",
  "grid-strategy",
  "dust_extinction",
  "scikit-image",
  "dask",
  "requests",
  "urllib3",
  "PyYAML",
  "packaging",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]

[project.urls]
Homepage = "https://github.com/keflavich/jwst-gc-pipeline"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]

[tool.setuptools.package-data]
"jwst_gc_pipeline.reduction" = ["*.ecsv"]

[tool.setuptools_scm]
write_to = "jwst_gc_pipeline/version.py"
# Tags in this repo look like "v1.0-2026.06" (a date suffix after the semantic
# version).  The default setuptools_scm tag_regex tries to swallow the whole
# "1.0-2026.06" as the version, which is not PEP 440 parseable and aborts the
# build/install.  Capture only the leading numeric version so installation works.
tag_regex = "^(?:[\\w-]+-)?(?P<version>v?\\d+(?:\\.\\d+)*)"
fallback_version = "1.0.dev0"

[tool.pytest.ini_options]
testpaths = [
  "jwst_gc_pipeline",
  "tests",
]
